--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ nav{
   width: 100vw;
   height: 5vh;
   background-color: black;
+
 }
 
 nav ul{
@@ -46,8 +47,9 @@ font-family: monospace;
 .main-content {
   width: 100vw;
   height: 50vh;
-  background-image: url("https://picsum.photos/id/10/1000/1000");
+  background-image: url("../img/9.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
 
 display: flex;
 flex-direction: column-reverse;
@@ -57,8 +59,6 @@ align-items: center;
 }
 
 
-.
-}
 
 
 div.gallery {
@@ -79,9 +79,7 @@ div.desc {
   text-align: center;
 }
 
-* {
-  box-sizing: border-box;
-}
+
 
 .responsive {
   padding: 0 6px;
@@ -90,7 +88,11 @@ div.desc {
 }
 
 .titulo-listas{
-  text-align: center;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
 
 }
 
@@ -115,14 +117,24 @@ align-items: center;
 
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (min-width: 717px ) and (max-width: 1023px) {
+  header {
+    background-color: darkred;
+  }
+  .main-content{
+
+  }
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 717px) {
+  header {
+   
+    background-color: blueviolet;
+  }
   .responsive {
     width: 100%;
   }
