--- a/css/main.css
+++ b/css/main.css
@@ -5,15 +5,20 @@
   padding: 0;
   }
 
+  .seccions__title{
+    color:red;
+  }
+
 
 
   header{
     width: 100vw;
-    height:8vh;    background-color:black ;
+    height:8vh; 
+    background-color:black ;
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 900px;
   }
 
 nav{
@@ -27,7 +32,7 @@ nav ul{
   display: flex;
   justify-content:space-evenly;
   align-items: center;
-  width: 60%;
+  width: 80%;
   height: 100%;
     margin: auto;
 
@@ -88,12 +93,12 @@ div.desc {
 }
 
 .titulo-listas{
+  font-size: 1.5rem;
+  font-style: oblique;
   display: flex;
-  justify-content:center;
-  align-items: center;
-  width: 100%;
-  height: 50px;
-
+  justify-content: center;
+  align-items:center;
+  
 }
 
 .social{
