--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 
   header{
     width: 100vw;
-    height:8vh; 
+    height:10vh; 
     background-color:black ;
     
     display: flex;
@@ -21,9 +21,15 @@
     align-items: center;
   }
 
+  header h1{
+    color: whitesmoke;
+    font-size: 2rem;
+    font-family: 'Bebas Neue', cursive;;
+  }
+
 nav{
   width: 100vw;
-  height: 5vh;
+  height: 8vh;
   background-color: black;
 
 }
@@ -32,21 +38,25 @@ nav ul{
   display: flex;
   justify-content:space-evenly;
   align-items: center;
-  width: 80%;
-  height: 100%;
-    margin: auto;
-
+  width: 600px;
+  height:100% ;
+  margin:auto ;
 }
 
 nav ul li {
   color: whitesmoke;
   list-style: none;
+  width: 80px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 nav a {
-  color: whitesmoke;
+  color:gold;
 text-decoration: none;
-font-family: monospace;
+font-family: 'Bebas Neue', cursive;
 }
 
 .main-content {
