--- a/v/css/main.css
+++ b/v/css/main.css
@@ -83,6 +83,7 @@ nav a {
   display: inline-block;
 }
 .card {
+  margin: 6px;
   padding: 0 6px;
   float: left;
   width: 24.99999%;
@@ -104,17 +105,6 @@ div.card-content p {
   padding: 15px;
   text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-
 .social{
   width: 100%;
   height: 150px;
@@ -143,10 +133,9 @@ gap: 2px
   header {
     background-color: darkred;
   }
-  .main-content{
 
   }
-  .responsive {
+  .card {
     width: 49.99999%;
     margin: 6px 0;
   }
@@ -157,14 +146,10 @@ gap: 2px
    
     background-color: blueviolet;
   }
-  .responsive {
+  .card {
     width: 100%;
   }
 }
 
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
+
 
