--- a/css/main.css
+++ b/css/main.css
@@ -4,27 +4,20 @@
   margin: 0;
   padding: 0;
   }
-
-  .seccions__title{
-    color:red;
-  }
-
-
-
+  
   header{
     width: 100vw;
     height:10vh; 
     background-color:black ;
-    
     display: flex;
     justify-content: center;
     align-items: center;
   }
-
+  
   header h1{
     color: whitesmoke;
-    font-size: 2rem;
-    font-family: 'Bebas Neue', cursive;;
+    font-size: 3rem;
+    font-family: 'Bebas Neue', cursive;
   }
 
 nav{
@@ -70,14 +63,22 @@ display: flex;
 flex-direction: column-reverse;
 justify-content:center;
 align-items: center;
-
 }
 
+.tittle-list{
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  width: 100%;
+  height: 50px;
+  font-family: "Bebas Neue";
+}
 
-
-
-div.gallery {
-  border: 1px solid #ccc;
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+  height: 500px; 
 }
 
 div.gallery:hover {
@@ -86,29 +87,12 @@ div.gallery:hover {
 
 div.gallery img {
   width: 100%;
-  height: auto;
+  height: 250px;
 }
 
-div.desc {
+div. {
   padding: 15px;
   text-align: center;
-}
-
-
-
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-.titulo-listas{
-  font-size: 1.5rem;
-  font-style: oblique;
-  display: flex;
-  justify-content: center;
-  align-items:center;
-  
 }
 
 .social{
